# clip-vit

./: .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml
docs/: 1.avif
mlx_clip/: README.md  __init__.py  convert.py
